@startuml

title __EXCEPTIONS's Class Diagram__\n

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.CantBuyMoreThanOneHouseException {
            + CantBuyMoreThanOneHouseException()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.FullBladderException {
            + FullBladderException()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.HouseIsTooDirtyException {
            + HouseIsTooDirtyException()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.MaidNotEnoughPaymentException {
            + MaidNotEnoughPaymentException()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.NoEnergyException {
            + NoEnergyException()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.RoomDoesNotExistsException {
            + RoomDoesNotExistsException()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        abstract class academy.mindswap.sims.exceptions.SimsExceptions {
            - message : String
            + SimsExceptions()
            + getMessage()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.YouCantDoActionOnRoomException {
            + YouCantDoActionOnRoomException()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.YouNeedAHouseException {
            + YouNeedAHouseException()
        }
      }
    }
  }
  

  namespace academy.mindswap {
    namespace sims {
      namespace exceptions {
        class academy.mindswap.sims.exceptions.YouNeedARoomException {
            + YouNeedARoomException()
        }
      }
    }
  }
  

  academy.mindswap.sims.exceptions.CantBuyMoreThanOneHouseException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.FullBladderException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.HouseIsTooDirtyException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.MaidNotEnoughPaymentException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.NoEnergyException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.RoomDoesNotExistsException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.YouCantDoActionOnRoomException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.YouNeedAHouseException -up-|> academy.mindswap.sims.exceptions.SimsExceptions
  academy.mindswap.sims.exceptions.YouNeedARoomException -up-|> academy.mindswap.sims.exceptions.SimsExceptions


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
